--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,44 +1,56 @@
 <web-app id="WebApp_ID" version="3.1"
-   xmlns="http://java.sun.com/xml/ns/javaee" 
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
    http://java.sun.com/xml/ns/j2ee/web-app_3_1.xsd">
 
 	<display-name>Spring MVC Application</display-name>
 
-	<!-- Spring Dispatch Servlet and Mapping-->
+	<!-- Spring Dispatch Servlet and Mapping -->
 	<servlet>
-      <servlet-name>SpringWeb</servlet-name>
-      <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-      <init-param>
-      	<param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationConfiguration.xml</param-value>
-      </init-param>
-      <load-on-startup>1</load-on-startup>
-   	</servlet>
-   	<servlet-mapping>
-      <servlet-name>SpringWeb</servlet-name>
-      <url-pattern>/</url-pattern>
-   	</servlet-mapping>
+		<servlet-name>SpringWeb</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/applicationConfiguration.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SpringWeb</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 	<context-param>
-	   <param-name>contextConfigLocation</param-name>
-	   <param-value>/WEB-INF/applicationConfiguration.xml</param-value>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationConfiguration.xml</param-value>
 	</context-param>
- 	<listener>
-	   <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener
+		</listener-class>
 	</listener>
 
+	<listener>
+		<listener-class>org.springframework.web.util.Log4jConfigListener
+		</listener-class>
+	</listener>
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>/WEB-INF/log4j.properties</param-value>
+	</context-param>
+
 	<!-- Jersey Servlet -->
-    <servlet>
-        <servlet-name>Jersey Web Services</servlet-name>
-        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-        <init-param>
-            <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>com.gcu.services</param-value>
-        </init-param>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Jersey Web Services</servlet-name>
-        <url-pattern>/rest/*</url-pattern>
-    </servlet-mapping>
+	<servlet>
+		<servlet-name>Jersey Web Services</servlet-name>
+		<servlet-class>org.glassfish.jersey.servlet.ServletContainer
+		</servlet-class>
+		<init-param>
+			<param-name>jersey.config.server.provider.packages</param-name>
+			<param-value>com.gcu.services</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Jersey Web Services</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
 </web-app>
